parse/src/snapshots/ninja_parse__parser__test__build_no_bindings-4.snap
---
source: parse/src/parser.rs
expression: ast
---
Description {
    builds: [
        Build {
            action: Command(
                "touch",
            ),
            inputs: [
                [
                    105,
                    110,
                    112,
                    49,
                ],
                [
                    105,
                    110,
                    112,
                    50,
                ],
            ],
            implicit_inputs: [],
            order_inputs: [],
            outputs: [
                [
                    102,
                    111,
                    111,
                    46,
                    111,
                ],
                [
                    102,
                    111,
                    111,
                    46,
                    112,
                ],
            ],
        },
    ],
    defaults: None,
}
