parse/src/snapshots/ninja_parse__parser__test__build_no_bindings.snap
---
source: parse/src/parser.rs
expression: ast
---
Description {
    builds: [
        Build {
            action: Command(
                "touch",
            ),
            inputs: [],
            implicit_inputs: [],
            outputs: [
                [
                    102,
                    111,
                    111,
                    46,
                    111,
                ],
            ],
        },
    ],
}
