parse/src/snapshots/ninja_parse__parser__test__simple.snap
---
source: parse/src/parser.rs
expression: ast
---
Description {
    builds: [
        Build {
            action: Command(
                "gcc -c foo.c",
            ),
            inputs: [
                [
                    102,
                    111,
                    111,
                    46,
                    99,
                ],
            ],
            implicit_inputs: [],
            order_inputs: [],
            outputs: [
                [
                    102,
                    111,
                    111,
                    46,
                    111,
                ],
            ],
        },
    ],
}
